# segs

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  LICENSE  README.md  flake.nix  index.html  justfile  rustfmt.toml
.gitlab/issue_templates/: bug-or-incident.md  question-or-discussion.md  task-or-feature.md
assets/: manifest.json  sw.js
cosmos/: fsw_cmd.txt  fsw_tlm.txt
crates/segs/: Cargo.toml
crates/segs-assets/: Cargo.toml  build.rs  justfile
crates/segs-assets/scripts/: generate_sources.py
crates/segs-assets/src/: fonts.rs  icons.rs  lib.rs  sources.rs
crates/segs-assets/src/fonts/: figtree.rs
crates/segs-assets/src/icons/: add_file.rs  add_folder.rs  add_layout.rs  antenna.rs  archive.rs  arrow.rs  bell.rs  caret_down.rs  charts.rs  cloud.rs  cog.rs  documents.rs  error.rs  ethernet.rs  eye.rs  fold_all.rs  function.rs  gauge.rs  globe.rs  layout.rs  lens.rs  lightning.rs  lock.rs  network.rs  palette.rs  panels.rs  plots.rs  pulse.rs  rectangle_vertical.rs  refresh.rs  reticle.rs  square_rotated.rs  stack.rs  star.rs  tag.rs  themes.rs  tools.rs  usb.rs  warning.rs  window.rs
crates/segs-mavlink/: Cargo.toml
crates/segs-mavlink/src/: connection.rs  core.rs  error.rs  lib.rs
crates/segs-mavlink/src/connection/: direct_serial.rs  udp.rs
crates/segs-memory/: Cargo.toml
crates/segs-memory/src/: lib.rs  memory.rs  storage.rs
crates/segs-memory/src/memory/: persistent.rs  temporary.rs
crates/segs-plot/: Cargo.toml
crates/segs-plot/src/: aesthetics.rs  axis.rs  bounds.rs  colors.rs  cursor.rs  data.rs  lib.rs  math.rs  memory.rs  plot.rs  rect_elem.rs  utils.rs
crates/segs-plot/src/items/: arrows.rs  bar_chart.rs  box_plot.rs  filled_area.rs  heatmap.rs  line.rs  mod.rs  plot_image.rs  points.rs  polygon.rs  series.rs  span.rs  text.rs
crates/segs-plot/src/overlays/: coordinates.rs  legend.rs  mod.rs
crates/segs-ui/: Cargo.toml
crates/segs-ui/src/: animation.rs  components.rs  containers.rs  lib.rs  style.rs  utils.rs  widgets.rs
crates/segs-ui/src/components/: buttons.rs
crates/segs-ui/src/containers/: resizable_panel.rs
crates/segs-ui/src/style/: colors.rs  stack.rs
crates/segs-ui/src/widgets/: atoms.rs  buttons.rs  labels.rs  separator.rs  text.rs
crates/segs-ui/src/widgets/buttons/: bottom_bar.rs  checkbox.rs  icon_btn.rs  icon_toggle.rs  ribbon_toggle.rs  side_button.rs  status_bar.rs  toggle.rs
crates/segs-ui/src/widgets/labels/: selectable_label.rs  vertical_selectable_label.rs
crates/segs-ui/src/widgets/text/: drag_value.rs  text_edit.rs  value_edit.rs
crates/segs/src/: app.rs  args.rs  csd.rs  dataflow.rs  main.rs  ui.rs  utils.rs
crates/segs/src/dataflow/: adapter.rs  mapping.rs  mavlink_adapter.rs  transport.rs
crates/segs/src/ui/: components.rs  modals.rs  panels.rs  popups.rs  status_bar.rs  views.rs
crates/segs/src/ui/components/: buttons.rs  left_menu.rs  mode_toggle.rs  value_edits.rs
crates/segs/src/ui/modals/: adapter_config.rs
crates/segs/src/ui/popups/: adapter_status.rs  connection.rs
crates/segs/src/ui/views/: configuration.rs  operator.rs
crates/segs/src/ui/views/configuration/: dataflow_editor.rs  layout_composer.rs  level_editor.rs  online_resources.rs  pane_controls.rs
docs/images/: App layout state machine.drawio
src/: cli.rs  communication.rs  error.rs  main.rs  mavlink.rs  message_broker.rs  serial.rs  ui.rs  utils.rs
src/ccsds/: mod.rs
src/communication/: error.rs  ethernet.rs  serial.rs
src/cosmos/: mod.rs  parser.rs  types.rs
src/mavlink/: base.rs  error.rs  message_broker.rs  reflection.rs
src/mavlink/reflection/: conversion.rs  fields.rs  profile.rs
src/message_broker/: connection.rs  message_bundle.rs  message_subscription.rs  reception_queue.rs
src/ui/: app.rs  cache.rs  composable_view.rs  composable_view_BACKUP_21160.rs  composable_view_BASE_21160.rs  composable_view_REMOTE_21160.rs  font.rs  layout_manager.rs  panes.rs  persistency.rs  shortcuts.rs  utils.rs  widget_gallery.rs  widgets.rs  windows.rs
src/ui/panes/: command.rs  default.rs  messages_viewer.rs  pid.rs  pid_drawing_tool.rs  plot.rs  plot_2d.rs  valve_control.rs
src/ui/panes/pid/: grid.rs  svg.rs
src/ui/panes/pid/svg/: attributes.rs  elements.rs
src/ui/panes/pid/svg/attributes/: d.rs  transform.rs
src/ui/panes/pid/svg/attributes/d/: move_to.rs  vertical_line_to.rs
src/ui/panes/pid/svg/elements/: defs.rs  path.rs  text.rs  use_node.rs
src/ui/panes/pid_drawing_tool/: connections.rs  elements.rs  grid.rs  pid_data.rs  pid_elements.rs  pos.rs  symbols.rs
src/ui/panes/pid_drawing_tool/symbols/: icons.rs  label.rs  labels.rs  motor_valve.rs  value_display.rs
src/ui/panes/pid_drawing_tool/symbols/icons/: motor_valve.rs
src/ui/panes/pid_new/: mod.rs
src/ui/panes/pid_new/svg/: mod.rs  utils.rs
src/ui/panes/pid_new/svg/attributes/: mod.rs  style.rs
src/ui/panes/pid_new/svg/attributes/data/: close_path.rs  ellicptical_arc.rs  horizonta_line_to.rs  line_to.rs  mod.rs
src/ui/panes/pid_new/svg/elements/: defs.rs  path.rs  text.rs  use_node.rs
src/ui/panes/plot/: fields.rs  source_window.rs
src/ui/panes/valve_control/: commands.rs  enums.rs  icons.rs  ui.rs  valves.rs
src/ui/panes/valve_control/ui/: shortcut_widget.rs  valve_control_window.rs
src/ui/persistency/: README.md  layout_manager.rs  layout_manager_window.rs  layout_store.rs
src/ui/widgets/: reception_led.rs  shortcut_widget.rs
src/ui/windows/: command_switch.rs  connections.rs  layouts.rs
src/ui/windows/command_switch/: command.rs  configurable.rs  direct.rs  state.rs
src/utils/: id.rs  leases.rs  ring_buffer.rs  units.rs
web/: index.html
