[package]
name = "segs"
version = "0.1.0"
# if you're a contributor, you should add your name here
authors = [
    "Federico Lolli <federico.lolli@skywarder.eu>",
    "Niccolò Betto <niccolo.betto@skywarder.eu>",
]
edition = "2024"
description = "Skyward Enhanced Ground Software"
license = "MIT"

[dependencies]
anyhow = "1.0"
directories = "6.0.0"
egui_tiles = "0.12"
eframe = { version = "0.31", features = ["persistence"] }
egui = { version = "0.31", features = ["log", "mint"] }
egui_extras = { version = "0.31", features = ["svg"] }
egui_plot = "0.31"
egui_file = "0.22"
enum_dispatch = "0.3"
glam = { version = "0.29", features = ["serde", "mint"] }
itertools = "0.14.0"
jiff = "0.2.13"
mint = "0.5.9"
profiling = "1.0"
ring-channel = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dependencies.skyward_mavlink]
git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git"
# rev = "18062c9f6318de079b706a7c110761941fe07a85"
branch = "required-by-segs"
features = ["reflection", "lyra", "serde"]

[dependencies.mavlink-bindgen]
git = "https://git.skywarder.eu/avn/swd/mavlink/rust-mavlink.git"
rev = "1b51a25d717993d39004152f215c33f4333e2056"
features = ["serde"]

[features]
profiling = ["profiling/profile-with-tracy"]

[package.metadata.packager]
product-name = "SEGS"
description = "Skyward Enhanced Ground Software"
version = "0.1.0"
authors = [
    "Federico Lolli <federico.lolli@skywarder.eu>",
    "Niccolò Betto <niccolo.betto@skywarder.eu>",
]
identifier = "skywarder.eu"
category = "DeveloperTool"
license-file = "LICENSE"
before-packaging-command = "cargo build --release"
resources = ["assets/icon_*.png", "LICENSE", "README.md"]
icons = ["assets/icon_*.png"]
