[package]
name = "segs"
version = "0.1.0"
# if you're a contributor, you should add your name here
authors = [
    "Federico Lolli <federico.lolli@skywarder.eu>",
    "Niccolò Betto <niccolo.betto@skywarder.eu>",
]
edition = "2024"
description = "Skyward Enhanced Ground Software"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
egui_tiles = "0.12"
eframe = { version = "0.31", features = ["persistence"] }
egui = { version = "0.31", features = ["log", "mint"] }
egui_extras = { version = "0.31", features = ["svg"] }
egui_plot = "0.31"
egui_file = "0.22"
enum_dispatch = "0.3"
glam = { version = "0.29", features = ["serde", "mint"] }
itertools = "0.14.0"
jiff = "0.2.13"
mint = "0.5.9"
profiling = "1.0"
ring-channel = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dependencies.skyward_mavlink]
git = "https://git.skywarder.eu/avn/swd/mavlink/mavlink-skyward-lib.git"
rev = "56b4c351470f0d6f41733d4f3beef6dadda7611a"
features = ["reflection", "orion", "serde"]

[dependencies.mavlink-bindgen]
git = "https://git.skywarder.eu/avn/swd/mavlink/rust-mavlink.git"
rev = "9a06b5bbfe555673f4df968e8756d9b46f5a4a73"
features = ["serde"]

[features]
profiling = ["profiling/profile-with-tracy"]
conrig = ["dep:clap"]

[package.metadata.packager]
product-name = "SEGS"
description = "Skyward Enhanced Ground Software"
version = "0.1.0"
authors = [
    "Federico Lolli <federico.lolli@skywarder.eu>",
    "Niccolò Betto <niccolo.betto@skywarder.eu>",
]
identifier = "skywarder.eu"
category = "DeveloperTool"
license-file = "LICENSE"
before-packaging-command = "cargo build --release"
resources = ["assets/icon_*.png", "LICENSE", "README.md"]
icons = ["assets/icon_*.png"]
