[workspace.package]
authors = ["Federico Lolli <federico.lolli@skywarder.eu>"]
description = "Skyward Enhanced Ground Software"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"

[workspace]
resolver = "3"
members = [
    "crates/segs-assets",
    "crates/segs",
    "crates/segs-ui",
    "crates/segs-plot", "crates/segs-memory",
]

[workspace.dependencies]
eframe = "0.33.3"
egui = { version = "0.33.3", default-features = false }
emath = { version = "0.33.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
