[package]
name = "segs-assets"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
egui = { workspace = true, default-features = false }
egui_extras = { version = "0.33.3", features = ["svg"] }
