[package]
name = "segs-mavlink"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytes = "1.11.1"
mavlink-bindgen = { version = "0.17.1", default-features = false }
mavlink-core = { version = "0.17.1", default-features = false, features = [
    "std",
] }
serialport = "4.8.1"
