[package]
name = "segs-memory"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
egui.workspace = true
fjall = "3.0.1"
nohash = "0.2.0"
postcard = { version = "1.1.3", features = ["alloc"] }
serde.workspace = true
thiserror.workspace = true
