[package]
name = "segs-memory"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
egui.workspace = true
nohash = "0.2.0"
postcard = { version = "1.1.3", features = ["alloc"] }
serde.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fjall = "3.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
