[package]
name = "segs-plot"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
egui = { workspace = true, default-features = false }
emath = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "egui/serde"]
