[package]
name = "segs-plot"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
egui = { workspace = true, default-features = false }
emath = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "egui/serde"]
