[package]
name = "segs-ui"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arc-swap = "1.8.0"
eframe.workspace = true
egui.workspace = true
segs-assets.path = "../segs-assets"
smallvec = "1.15.1"
