[package]
name = "segs-ui"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
egui.workspace = true
segs-assets.path = "../segs-assets"
segs-memory = { version = "0.1.0", path = "../segs-memory" }
serde = { workspace = true, features = ["derive"] }
smallvec = "1.15.1"
