[package]
name = "segs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
eframe.workspace = true
egui.workspace = true
mimalloc = { version = "0.1.48", features = ["v3"] }
segs-assets.path = "../segs-assets"
segs-plot.path = "../segs-plot"
segs-ui.path = "../segs-ui"
