[package]
name = "segs"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
egui.workspace = true
mimalloc = { version = "0.1.48", features = ["v3"] }
segs-assets.path = "../segs-assets"
segs-plot.path = "../segs-plot"
segs-ui.path = "../segs-ui"
