[package]
name = "segs"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aho-corasick = "1.1.4"
directories = "6.0.0"
eframe.workspace = true
egui.workspace = true
enum_dispatch = "0.3.13"
mimalloc = { version = "0.1.48", features = ["v3"] }
segs-assets.path = "../segs-assets"
segs-memory.path = "../segs-memory"
segs-plot.path = "../segs-plot"
segs-ui.path = "../segs-ui"
segs-mavlink.path = "../segs-mavlink"
serde = { workspace = true, features = ["derive"] }
smallvec = "1.15.1"
argh = "0.1.19"
